package com.swp391.backend.controller;

import com.swp391.backend.dto.ApiRequests;
import com.swp391.backend.service.PromotionReportService;
import org.springframework.format.annotation.DateTimeFormat;
import org.springframework.web.bind.annotation.*;

import java.time.LocalDate;

@RestController
@RequestMapping("/api")
public class PromotionReportController {
    private final PromotionReportService promotionReportService;

    public PromotionReportController(PromotionReportService promotionReportService) {
        this.promotionReportService = promotionReportService;
    }

    @GetMapping("/promotions")
    public Object promotions(@RequestParam(defaultValue = "false") boolean includeInactive) {
        return promotionReportService.promotions(includeInactive);
    }

    @PostMapping("/promotions")
    public Object createPromotion(@RequestBody ApiRequests.PromotionUpsert request) {
        return promotionReportService.createPromotion(request);
    }

    @PutMapping("/promotions/{promotionId}")
    public Object updatePromotion(@PathVariable Long promotionId, @RequestBody ApiRequests.PromotionUpsert request) {
        return promotionReportService.updatePromotion(promotionId, request);
    }

    @PostMapping("/promotions/apply-preview")
    public Object applyPromotionPreview(@RequestBody ApiRequests.PromotionApply request) {
        return promotionReportService.applyPromotionPreview(request);
    }

    @GetMapping("/membership/levels")
    public Object membershipLevels(@RequestParam(defaultValue = "false") boolean includeInactive) {
        return promotionReportService.membershipLevels(includeInactive);
    }

    @PostMapping("/membership/levels")
    public Object createMembershipLevel(@RequestBody ApiRequests.MembershipLevelUpsert request) {
        return promotionReportService.createMembershipLevel(request);
    }

    @PutMapping("/membership/levels/{id}")
    public Object updateMembershipLevel(@PathVariable Long id, @RequestBody ApiRequests.MembershipLevelUpsert request) {
        return promotionReportService.updateMembershipLevel(id, request);
    }

    @GetMapping("/membership/{customerId}/progress")
    public Object membershipProgress(@PathVariable Long customerId) {
        return promotionReportService.membershipProgress(customerId);
    }

    @GetMapping("/reports")
    public Object reports(
            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to
    ) {
        return promotionReportService.reports(from, to);
    }

    @GetMapping("/settings")
    public Object settings(@RequestParam(required = false) String group) {
        return promotionReportService.settings(group);
    }

    @PutMapping("/settings/{key}")
    public Object updateSetting(@PathVariable String key, @RequestBody ApiRequests.SettingUpdate request) {
        return promotionReportService.updateSetting(key, request);
    }

    @GetMapping("/notifications/{userId}")
    public Object notifications(@PathVariable Long userId) {
        return promotionReportService.notifications(userId);
    }

    @PutMapping("/notifications/{notificationId}/toggle")
    public Object toggleNotificationRead(@PathVariable Long notificationId) {
        return promotionReportService.toggleNotificationRead(notificationId);
    }

    @PutMapping("/notifications/user/{userId}/read-all")
    public Object markAllNotificationsRead(@PathVariable Long userId) {
        return promotionReportService.markAllNotificationsRead(userId);
    }
}
